<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/homeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/home_label"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accessoriesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:text="@string/accessories_label"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lightsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:text="@string/lights_label"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameTemp"
        android:layout_width="91dp"
        android:layout_height="76dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeLabel">

        <TextView
            android:id="@+id/tvTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="20dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/tempIcon"
            android:layout_width="27dp"
            android:layout_height="40dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="19dp"
            app:srcCompat="@drawable/temperature"
            android:contentDescription="@string/temperature_content_desc" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameHumidity"
        android:layout_width="91dp"
        android:layout_height="76dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintEnd_toStartOf="@+id/frameMotion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/frameTemp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="20dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/humidityIcon"
            android:layout_width="26dp"
            android:layout_height="50dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="13dp"
            app:srcCompat="@drawable/humidity"
            android:contentDescription="@string/humidity_content_desc" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameMotion"
        android:layout_width="91dp"
        android:layout_height="76dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/frameHumidity"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/motionIcon"
            android:layout_width="67dp"
            android:layout_height="59dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/motion_icon"
            android:contentDescription="@string/motion_content_desc" />

        <TextView
            android:id="@+id/motionIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="55dp"
            android:text="@string/disabled"
            android:textColor="@color/black"
            android:textSize="11sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/temperature_label"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameTemp" />

    <TextView
        android:id="@+id/humidityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="4dp"
        android:text="@string/humidity_label"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/frameHumidity" />

    <TextView
        android:id="@+id/motionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/motion_label"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toEndOf="@+id/humidityLabel"
        app:layout_constraintTop_toBottomOf="@+id/frameMotion" />

    <FrameLayout
        android:id="@+id/frameSecurity"
        android:layout_width="98dp"
        android:layout_height="76dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/frame_corners"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accessoriesLabel">

        <Switch
            android:id="@+id/securitySwitch"
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="43dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <ImageView
            android:id="@+id/securityIcon"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            app:srcCompat="@drawable/security"
            android:contentDescription="@string/security_content_desc" />

        <TextView
            android:id="@+id/securityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="4dp"
            android:text="@string/security_label"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/securityIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="28dp"
            android:text="@string/disabled"
            android:textColor="#FF0000"
            android:textSize="11sp"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameDoor"
        android:layout_width="98dp"
        android:layout_height="76dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/frame_corners"
        app:layout_constraintStart_toEndOf="@+id/frameSecurity"
        app:layout_constraintTop_toBottomOf="@+id/humidityLabel">

        <Switch
            android:id="@+id/doorSwitch"
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="43dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <ImageView
            android:id="@+id/doorIcon"
            android:layout_width="39dp"
            android:layout_height="29dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            app:srcCompat="@drawable/door_lock"
            android:contentDescription="@string/door_content_desc" />

        <TextView
            android:id="@+id/doorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="4dp"
            android:text="@string/door_label"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/doorIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="28dp"
            android:text="@string/unlocked"
            android:textColor="#FF0000"
            android:textSize="11sp"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameSensor"
        android:layout_width="98dp"
        android:layout_height="76dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/frame_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toEndOf="@+id/frameDoor"
        app:layout_constraintTop_toBottomOf="@+id/motionLabel">

        <ImageView
            android:id="@+id/sensorIcon"
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:layout_marginStart="8dp"
            app:srcCompat="@drawable/sensor"
            android:contentDescription="@string/sensor_content_desc" />

        <TextView
            android:id="@+id/sensorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="4dp"
            android:text="@string/outdoor_sensor_label"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/sensorSwitch"
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="43dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/sensorIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="28dp"
            android:text="@string/disabled"
            android:textColor="#FF0000"
            android:textSize="11sp"
            android:textStyle="bold" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="4dp"
        android:text="@string/living_room_label"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLivingRoom"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/bedroom_label"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameBedroom"
        app:layout_constraintVertical_bias="0.04" />

    <FrameLayout
        android:id="@+id/frameBedroom"
        android:layout_width="47dp"
        android:layout_height="261dp"

        android:layout_marginTop="88dp"
        android:background="@drawable/frame_corners"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/frameLivingRoom"
        app:layout_constraintTop_toBottomOf="@+id/frameDoor">

        <com.google.android.material.slider.Slider
            android:id="@+id/bedroomSlider"
            android:layout_width="259dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:rotation="270"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="255"
            app:haloColor="@color/halo_color"
            app:labelStyle="@style/labelStyle"
            app:thumbColor="@color/thumb_color"
            app:tickVisible="false"
            app:trackColorActive="@color/active_part_color"
            app:trackColorInactive="@color/inactive_partColor" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLivingRoom"
        android:layout_width="47dp"
        android:layout_height="261dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/frame_corners"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/frameBedroom"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lightsLabel">

        <com.google.android.material.slider.Slider
            android:id="@+id/livingRoomSlider"
            android:layout_width="259dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:rotation="270"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="255"
            app:haloColor="@color/halo_color"
            app:labelStyle="@style/labelStyle"
            app:thumbColor="@color/thumb_color"
            app:tickVisible="false"
            app:trackColorActive="@color/active_part_color"
            app:trackColorInactive="@color/inactive_partColor" />
    </FrameLayout>

    <ImageView
        android:id="@+id/lightIcon"
        android:layout_width="33dp"
        android:layout_height="35dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="105dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameSensor"
        app:srcCompat="@drawable/light_bulb"
        android:contentDescription="@string/light" />

    <ImageView
        android:id="@+id/lightIcon2"
        android:layout_width="33dp"
        android:layout_height="35dp"
        android:layout_marginTop="43dp"
        app:layout_constraintEnd_toStartOf="@+id/lightIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameSecurity"
        app:srcCompat="@drawable/light_bulb"
        android:contentDescription="@string/light" />

</androidx.constraintlayout.widget.ConstraintLayout>